# terminal-snake-game

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: terminal-snake-game Build.yml
entities/: food.c  snake.c
entities/include/food/: food.h
entities/include/snake/: snake.h
memory/include/: mem.h
tools/: draw_to_screen.c  equations.c  refresh.c  restore.c  save_state.c
tools/include/: draw_to_screen.h  equations.h  refresh.h  restore.h  save_state.h
window/: terminal.c
window/include/terminal/: keystrokes_codes.h  terminal.h
